Fixed skill pills display on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,3 +31,8 @@ p.cbar{
 #exp{
     display: none;
 }
+
+.skills{
+    display: flex;
+    flex-wrap: wrap;
+}
